mutants.out/log/src__proto__client__mod.rs_line_196_col_9_007.log

*** src/proto/client/mod.rs:196:9: replace Client<BufStream<S>>::connect_with -> Result<Client<BufStream<S>>, Error> with Ok(Client::from(BufStream::new()))

*** mutation diff:
--- src/proto/client/mod.rs
+++ replace Client<BufStream<S>>::connect_with -> Result<Client<BufStream<S>>, Error> with Ok(Client::from(BufStream::new()))
@@ -188,22 +188,17 @@
 }
 
 impl<S: AsyncRead + AsyncWrite + Send + Unpin> Client<BufStream<S>> {
     /// Create new [`Client`] and connect to a Faktory server with a non-standard stream.
     pub async fn connect_with(
         stream: S,
         pwd: Option<String>,
     ) -> Result<Client<BufStream<S>>, Error> {
-        let buffered = BufStream::new(stream);
-        let opts = ClientOptions {
-            password: pwd,
-            ..Default::default()
-        };
-        Client::new(buffered, opts).await
+        Ok(Client::from(BufStream::new())) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl Client<BufStream<TokioStream>> {
     /// Create new [`Client`] and connect to a Faktory server.
     ///
     /// If `url` is not given, will use the standard Faktory environment variables. Specifically,
     /// `FAKTORY_PROVIDER` is read to get the name of the environment variable to get the address


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0061]: this function takes 1 argument but 0 arguments were supplied
   --> src/proto/client/mod.rs:196:25
    |
196 |         Ok(Client::from(BufStream::new())) /* ~ changed by cargo-mutants ~ */
    |                         ^^^^^^^^^^^^^^-- an argument is missing
    |
note: associated function defined here
   --> /home/pavel/.cargo/registry/src/index.crates.io-6f17d22bba15001f/tokio-1.36.0/src/io/util/buf_stream.rs:29:12
    |
29  |     pub fn new(stream: RW) -> BufStream<RW> {
    |            ^^^
help: provide the argument
    |
196 |         Ok(Client::from(BufStream::new(/* stream */))) /* ~ changed by cargo-mutants ~ */
    |                                       ~~~~~~~~~~~~~~

error[E0308]: mismatched types
   --> src/proto/client/mod.rs:196:25
    |
196 |         Ok(Client::from(BufStream::new())) /* ~ changed by cargo-mutants ~ */
    |            ------------ ^^^^^^^^^^^^^^^^ expected `Client<BufStream<S>>`, found `BufStream<_>`
    |            |
    |            arguments to this function are incorrect
    |
    = note: expected struct `Client<BufStream<S>>`
               found struct `BufStream<_>`
note: associated function defined here
   --> /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/convert/mod.rs:584:8
    |
584 |     fn from(value: T) -> Self;
    |        ^^^^

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `faktory` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 2 previous errors

*** result: Failure(101)
